# NoiseToy

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp  main_window.h
.github/workflows/: cmake-multi-platform.yml
src/: main.cpp  types.hpp
src/ui/: main_window.cpp  main_window.hpp
